# setup_cob4

./: .gitignore  .rosinstall  BIOS_settings.md  InstallCob4.sh  PostInstallCob4.sh  README.md  README_admin.md  README_images.md  README_install.md  README_setup.md  cob-adduser  cob-deluser  cob-shutdown  helper_client_list.sh  helper_component_list.sh  ssh_config.sh  sync_packages.sh  test_encrypt.sh
MTS_backup/: 52_ERB145-23166-2016-07-11.eeprom  53_ERB145-23167-2016-07-11.eeprom  54_ERB145-23188-2016-07-11.eeprom  55_ERB145-23189-2016-07-11.eeprom  LEFT_61_PRL+100-31070-2016-07-11.eeprom  LEFT_62_ERB145-23150-2016-07-11.eeprom  LEFT_63_ERB145-23178-2016-07-11.eeprom  LEFT_64_ERB145-23179-2016-07-11.eeprom  LEFT_65_ERB145-23180-2016-07-11.eeprom  LEFT_66_ERB115-23196-2016-07-11.eeprom  LEFT_67_ERB115-23197-2016-07-11.eeprom  RIGHT_51_PRL+100-31072-2016-07-11.eeprom  RIGHT_56_ERB115-23194-2016-07-11.eeprom  RIGHT_57_ERB115-23195-2016-07-11.eeprom
cob-pcs/: 60-can.network  analyze_packages.sh  chrony_client  chrony_server  cob-pcs-execute.sh  cob-pcs-install.sh  cob.bash.bashrc.b  cob.bash.bashrc.h  cob.bash.bashrc.s  cob.bash.bashrc.t  networkInterfacesB1  networkInterfacesGateway  networkInterfacesMaster  networkInterfacesSlave  networkInterfacesT1  ntp_client  ntp_server  sync_packages.sh  tmux.conf  tmux.conf.focal  tmux.conf.trusty  tmux.conf.xenial  (+2 more)
cob4_homing/: CMakeLists.txt  launch.py  package.xml
cob4_homing/config/: base_controller.yaml  calib_driver.yaml
cob4_homing/launch/: calib.launch  test.launch
cob4_homing/scripts/: calib.py  patch.py
(+154 files in other folders)
