<?xml version="1.0"?>
<package format="2">
  <name>cob4_homing</name>
  <version>0.0.0</version>
  <description>The cob4_homing package</description>

  <maintainer email="mathias.luedtke@ipa.fraunhofer.de">Mathias Luedtke</maintainer>

  <license>LGPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roslaunch</depend>
  <exec_depend>cob_default_robot_config</exec_depend>
  <exec_depend>cob_hardware_config</exec_depend>
  <exec_depend>canopen_motor_node</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>

</package>
